[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/EnemyModel.gd" type="Script" id=1]
[ext_resource path="res://Enemies/monster.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60.8254, 98.3564 )

[sub_resource type="CircleShape2D" id=2]
radius = 175.096

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36.4473, 89.5291 )

[node name="EnemyModel" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Detect_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect_range"]
shape = SubResource( 2 )

[node name="Attack_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_range"]
position = Vector2( -46.7015, 5.38864 )
shape = SubResource( 3 )
[connection signal="body_entered" from="Detect_range" to="." method="_on_Detect_range_body_entered"]
[connection signal="body_exited" from="Detect_range" to="." method="_on_Detect_range_body_exited"]
[connection signal="body_entered" from="Attack_range" to="." method="_on_Attack_range_body_entered"]
[connection signal="body_exited" from="Attack_range" to="." method="_on_Attack_range_body_exited"]
